// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuAction renders component 1`] = `
<ClickAwayListener
  onClickAway={[Function]}
>
  <WithStyles(ForwardRef(IconButton))
    buttonRef={[Function]}
    className="button-mock"
    disableRipple={true}
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      className="icon-mock"
      fontSize="inherit"
    />
  </WithStyles(ForwardRef(IconButton))>
  <Memo(WithStyles(PopupMenu))
    anchorEl={
      Object {
        "current": null,
      }
    }
    open={false}
  >
    <ForwardRef(MenuList)
      className="menuList-mock"
    >
      <Memo(WithStyles(MenuActionItem))
        onClick={[MockFunction]}
        title="test"
      />
      <Memo(WithStyles(MenuActionItem))
        onClick={[MockFunction]}
        title="test 2"
      />
    </ForwardRef(MenuList)>
  </Memo(WithStyles(PopupMenu))>
</ClickAwayListener>
`;

exports[`MenuAction renders with optional props 1`] = `
<ClickAwayListener
  onClickAway={[Function]}
>
  <IconButton
    buttonRef={[Function]}
    className="button-mock"
    disableRipple={true}
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      className="icon-mock"
      fontSize="inherit"
    />
  </IconButton>
  <Memo(WithStyles(PopupMenu))
    anchorEl={
      Object {
        "current": null,
      }
    }
    offset="0 20"
    open={false}
  >
    <ForwardRef(MenuList)
      className="menuList-mock"
    >
      <Memo(WithStyles(MenuActionItem))
        onClick={[MockFunction]}
        title="test"
      />
      <Memo(WithStyles(MenuActionItem))
        onClick={[MockFunction]}
        title="test 2"
      />
    </ForwardRef(MenuList)>
  </Memo(WithStyles(PopupMenu))>
</ClickAwayListener>
`;
